<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="@dimen/spacing_medium"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/btnRoomClose"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:tint="@color/grey_20"
                app:srcCompat="@drawable/ic_close" />

        </LinearLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAdminName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            android:hint="@string/hint_admin_name">

            <EditText
                android:id="@+id/etAdminName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAdminFamily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            android:hint="@string/hint_admin_family">

            <EditText
                android:id="@+id/etAdminFamily"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAdminUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            android:hint="@string/hint_admin_username">

            <EditText
                android:id="@+id/etAdminUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAdminPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            android:hint="@string/hint_admin_password">

            <EditText
                android:id="@+id/etAdminPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:inputType="textPassword"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAdminEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            android:hint="@string/hint_admin_email">

            <EditText
                android:id="@+id/etAdminEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAdminPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            android:hint="@string/hint_admin_phone">

            <EditText
                android:id="@+id/etAdminPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:inputType="phone"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnAddSupervisor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/btn_purple_a400"
            android:text="@string/btn_add_supervisor"
            android:textColor="@android:color/white"/>


    </LinearLayout>

</androidx.cardview.widget.CardView>