<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="@dimen/spacing_medium"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/btnViolationClose"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:tint="@color/grey_20"
                app:srcCompat="@drawable/ic_close" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilViolationSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="-10dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            android:hint="@string/hint_payment_search">

            <EditText
                android:id="@+id/etViolationSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnViolationSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/btn_purple_a400"
            android:text="@string/btn_payment_search"
            android:textColor="@android:color/white"/>

        <LinearLayout
            android:id="@+id/llViolation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:visibility="visible"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/btnViolationDeleteS"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_close">

            </ImageButton>
            <TextView
                android:id="@+id/tvViolationSName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:text="یاسین فولادی"/>
        </LinearLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilViolationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            android:hint="@string/hint_violation_title">

            <EditText
                android:id="@+id/etViolationTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilViolationDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            android:hint="@string/hint_violation_detail">

            <EditText
                android:id="@+id/etViolationDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:inputType="textMultiLine"
                android:maxLength="3000"
                android:lines="4"
                android:maxLines="4"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilViolationCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            android:hint="@string/hint_violation_cost">

            <EditText
                android:id="@+id/etViolationCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="14sp"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnAddViolation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/btn_purple_a400"
            android:text="@string/btn_add_violation"
            android:textColor="@android:color/white"/>


    </LinearLayout>

</androidx.cardview.widget.CardView>